--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="LayoutPadrao">
+
 <head>
-<meta charset="UTF-8" />
 <title>Cadastro de título</title>
-<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
-<body>
-	<nav class="navbar navbar-inverse navbar-static-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#"> <img alt="Algaworks"
-					src="/images/logo-algaworks-1.png" />
-				</a>
-			</div>
-		</div>
-	</nav>
+
+<section layout:fragment="conteudo">
 
 	<form class="form-horizontal" method="POST" action="/titulos">
-		<div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
+		<div class="alert alert-success"
+			th:if="${!#strings.isEmpty(mensagem)}">
 			<span th:text="${mensagem}">Título salvo com sucesso!!!</span>
 		</div>
-	
+
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h1 class="panel-title">Novo título</h1>
+				<div class="clearfix">
+					<h1 class="panel-title aw-titulo-panel">Novo títulos</h1>
+					<a class="btn btn-link aw-link-panel" href="/titulos">Voltar para pesquisa</a>
+				</div>
 			</div>
 
 			<div class="panel-body">
 				<div class="form-group">
 					<label for="descricao" class="col-sm-2 control-label">Descrição</label>
 					<div class="col-sm-4">
-						<input type="text" class="form-control" id="descricao" name="descricao" />
+						<input type="text" class="form-control" id="descricao"
+							name="descricao" />
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento</label>
+					<label for="dataVencimento" class="col-sm-2 control-label">Data
+						de vencimento</label>
 					<div class="col-sm-2">
-						<input type="text" class="form-control" id="dataVencimento" name="dataVencimento" />
+						<input type="text" class="form-control" id="dataVencimento"
+							name="dataVencimento" />
 					</div>
 				</div>
 				<div class="form-group">
@@ -51,7 +50,8 @@
 					<label for="status" class="col-sm-2 control-label">Status</label>
 					<div class="col-sm-2">
 						<select class="form-control" name="status">
-							<option th:each="status : ${todosStatusTitulo}" th:value="${status}" th:text="${status.descricao}"></option>
+							<option th:each="status : ${todosStatusTitulo}"
+								th:value="${status}" th:text="${status.descricao}"></option>
 						</select>
 					</div>
 				</div>
@@ -64,6 +64,6 @@
 		</div>
 	</form>
 
-	<script src="/js/bootstrap.min.css"></script>
-</body>
+</section>
+
 </html>
