--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -30,7 +30,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="titulo : ${titulos}">
-						<td class="text-center" th:text="${titulo.codido}">1</td>
+						<td class="text-center" th:text="${titulo.codigo}">1</td>
 						<td th:text="${titulo.descricao}"></td>
 						<td class="text-center" th:text="${{titulo.dataVencimento}}"></td>
 						<td class="text-right" th:text="|R$ ${{titulo.valor}}|"></td>
@@ -39,7 +39,9 @@
 								th:classappend="${titulo.pendente ? 'label-danger' : 'label-success'}"></span>
 						</td>
 						<td class="text-center">
-							
+							<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}">
+								<span class="glyphicon glyphicon-pencil"></span>
+							</a>
 						</td>
 					</tr>
 					<tr>
