--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -9,6 +9,8 @@
 </head>
 
 <section layout:fragment="conteudo">
+	<div layout:include="MensagemGeral"></div>
+	
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<div class="clearfix">
@@ -42,6 +44,10 @@
 							<a class="btn btn-link btn-xs" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}">
 								<span class="glyphicon glyphicon-pencil"></span>
 							</a>
+							<a class="btn btn-link btn-xs" data-toggle="modal" data-target="#confirmacaoExclusaoModal"
+								th:attr="data-codigo=${titulo.codigo}, data-descricao=${titulo.descricao}">
+								<span class="glyphicon glyphicon-remove"></span>
+							</a>
 						</td>
 					</tr>
 					<tr>
@@ -50,6 +56,9 @@
 				</tbody>
 			</table>
 		</div>
+		
+		<div layout:include="DialogoConfirmacaoExclusao"></div>
+		
 	</div>	
 </section>
 
