--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -19,12 +19,12 @@
 			</div>
 		</div>
 		<div class="panel-body">
-			<form method="GET" class="form-horizontal">
+			<form method="GET" class="form-horizontal" action="/titulos" th:object="${filtro}">
 				<div class="form-group">
 					<div class="col-sm-4">
 						<div class="input-group">
 							<input class="form-control" placeholder="Qual título você está procurando?"
-								autofocus="autofocus"></input>
+								autofocus="autofocus" th:field="*{descricao}"></input>
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">
 									<i class="glyphicon glyphicon-search"></i>
