Correção dos contextPath do Thymeleaf

--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 		<div class="panel-body">
-			<form method="GET" class="form-horizontal" action="/titulos" th:object="${filtro}">
+			<form method="GET" class="form-horizontal" th:action="@{/titulos}" th:object="${filtro}">
 				<div class="form-group">
 					<div class="col-sm-4">
 						<div class="input-group">
