--- a/src/main/resources/templates/Cabecalho.html
+++ b/src/main/resources/templates/Cabecalho.html
@@ -7,7 +7,7 @@
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">
-				<img alt="Algaworks" src="/images/logo-algaworks-1.png" />
+				<img alt="Algaworks" th:src="@{/images/logo-algaworks-1.png}" />
 			</a>
 		</div>
 	</div>
