--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -10,7 +10,7 @@
 
 <section layout:fragment="conteudo">
 
-	<form class="form-horizontal" method="POST" action="/titulos" th:object="${titulo}">
+	<form class="form-horizontal" method="POST" th:action="@{/titulos}" th:object="${titulo}">
 		<div layout:include="MensagemGeral"></div>
 		<div layout:include="MensagemErro"></div>
 		
@@ -18,7 +18,7 @@
 			<div class="panel-heading">
 				<div class="clearfix">
 					<h1 class="panel-title aw-titulo-panel">Novo títulos</h1>
-					<a class="btn btn-link aw-link-panel" href="/titulos">Voltar para pesquisa</a>
+					<a class="btn btn-link aw-link-panel" th:href="@{/titulos}">Voltar para pesquisa</a>
 				</div>
 			</div>
 
